--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ add_library(
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(main src/main.cpp)
+add_executable(main src/main.cpp src/sharkGame.cpp src/ship.cpp)
 target_link_libraries(main Engine)
 target_link_libraries(main ${SDL2_LIBRARIES})
 target_link_libraries(main SDL2_image::SDL2_image)
