--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,19 @@ project(FruitShark)
 
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
+find_package(SDL2_mixer REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 find_package(ZLIB REQUIRED)
 
 get_target_property(SDL2_INCLUDE_DIRS SDL2::SDL2 INTERFACE_INCLUDE_DIRECTORIES)
 get_target_property(SDL2_image_INCLUDE_DIRS SDL2_image::SDL2_image INTERFACE_INCLUDE_DIRECTORIES)
 get_target_property(SDL2_ttf_INCLUDE_DIRS SDL2_ttf::SDL2_ttf INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(SDL2_mixer_INCLUDE_DIRS SDL2_mixer::SDL2_mixer INTERFACE_INCLUDE_DIRECTORIES)
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2_image_INCLUDE_DIRS})
+include_directories(${SDL2_mixer_INCLUDE_DIRS})
 include_directories(${SDL2_ttf_INCLUDE_DIRS})
 include_directories(${ZLIB_INCLUDE_DIRS})
 
@@ -34,10 +37,12 @@ add_executable(main src/main.cpp
         src/ship.cpp src/shark.cpp
         src/entity.cpp src/fruit.cpp
         src/textureHandler.cpp
-        src/mainMenu.cpp)
+        src/mainMenu.cpp
+        src/sound.cpp)
 target_link_libraries(main Engine)
 target_link_libraries(main ${SDL2_LIBRARIES})
 target_link_libraries(main SDL2_image::SDL2_image)
+target_link_libraries(main SDL2_mixer::SDL2_mixer)
 target_link_libraries(main SDL2_ttf::SDL2_ttf)
 target_link_libraries(main ZLIB::ZLIB)
 
@@ -48,6 +53,10 @@ add_custom_command (TARGET main POST_BUILD
 add_custom_command (TARGET main POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
         $<TARGET_FILE:SDL2_image::SDL2_image> $<TARGET_FILE_DIR:main>
+        )
+add_custom_command (TARGET main POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        $<TARGET_FILE:SDL2_mixer::SDL2_mixer> $<TARGET_FILE_DIR:main>
         )
 add_custom_command (TARGET main POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different
