--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,8 @@ add_executable(main src/main.cpp
         src/entity.cpp src/fruit.cpp
         src/textureHandler.cpp
         src/mainMenu.cpp
-        src/sound.cpp)
+        src/sound.cpp
+        src/bite.cpp)
 target_link_libraries(main Engine)
 target_link_libraries(main ${SDL2_LIBRARIES})
 target_link_libraries(main SDL2_image::SDL2_image)
