--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 cmake-build-debug 
 cmake-build-debug-visual-studio 
 cmake-build-debug-mingw 
+cmake-build-release-mingw 
+cmake-build-release-visual-studio 
+release 
