--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,8 @@ add_executable(main src/main.cpp
         src/mainMenu.cpp
         src/sound.cpp
         src/bite.cpp
-        src/pickup.cpp)
+        src/pickup.cpp
+        src/server.cpp)
 target_link_libraries(main Engine)
 target_link_libraries(main ${SDL2_LIBRARIES})
 target_link_libraries(main SDL2_image::SDL2_image)
